--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,61 +1,16 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title><%= title %></title>
-
-		<style>
-			#div-console {
-				border: 1px solid black;
-				height: 400px;
-				overflow-y: scroll;
-			}
-
-			#div-browser {
-				overflow-x: hidden;
-			}
+<%- include ./partials/head.ejs %>
+<body class="main-to-be-selected">
 
 
-		</style>
+<div id="menu-bottom" class="ui-footer ui-bar-f ui-footer-fixed slidedown" data-position="fixed" data-role="footer"  role="banner">
+	<ul>
 
-	</head>
-
-	<body>
-		<h3>Player State</h3>
-			<button id='button-volumioplay' class='control-websocket' disabled>Play</button>
-			<button id='button-volumiopause' class='control-websocket' disabled>Pause</button>
-			<button id='button-volumiostop' class='control-websocket' disabled>Stop</button>
-			<button id='button-volumioprev' class='control-websocket' disabled>Prev</button>
-			<button id='button-volumionext' class='control-websocket' disabled>Next</button>
-
-			<br />
-			<br />
-			<div id='playerstate'></div>
-
-		<h3>Play Queue</h3>
-			<ol id='playqueue' start='0'></ol>
-
-		<h3>Music Library</h3>
-			<button id='button-spopupdatetracklist' class='control-websocket' disabled>Refresh Spop Tracklist</button>
-			<button id='button-volumiorebuildlibrary' class='control-websocket' disabled>Rebuild Volumio Library</button>
-			<br />
-			<br />
-			<button id='button-libraryback' class='control-local' disabled>Back</button>
-			<button id='button-libraryforward' class='control-local' disabled>Forward</button>
-
-			<div id='div-browsertitle'></div>
-			<div id='div-browser'>
-				<ol id='browseview' start='0'></ol>
-			</div>
-
-		<h3>Console</h3>
-			<button id='button-clearconsole'>Clear</button>
-			<div id='div-console' style='border: 1px solid black; height: 400px; overflow-y: scroll;'>
-				<ul id='console' style='font-family: monospace;'></ul>
-			</div>
-
-		<script src="./scripts/assets/socket.io-1.2.0.js"></script>
-		<script src="./scripts/volumio/index-socketio-controller.js"></script>
-
-	</body>
-
+		<li id="open-panel-sx"><a href="#panel-sx" class="open-panel-sx" data-toggle="tab"><i class="fa fa-music sx"></i> Browse</a></li>
+		<li id="open-panel-lib"><a href="#panel-lib" class="open-panel-lib" data-toggle="tab"><i class="fa fa-columns sx"></i> Library</a></li>
+		<li id="open-playback" class="active"><a href="#playback" class="close-panels" data-toggle="tab"><i class="fa fa-play sx"></i> Playback</a></li>
+		<li id="open-panel-dx"><a href="#panel-dx" class="open-panel-dx" data-toggle="tab"><i class="fa fa-list sx"></i> Playlist</a></li>
+	</ul>
+</div>
+</body>
+<footer></footer>
 </html>
