Classic UI trivial port

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include ./partials/head.ejs %>
 <body class="main-to-be-selected">
-
+<%- include ./indextpl.ejs %>
 
 <div id="menu-bottom" class="ui-footer ui-bar-f ui-footer-fixed slidedown" data-position="fixed" data-role="footer"  role="banner">
 	<ul>
@@ -12,5 +12,4 @@
 	</ul>
 </div>
 </body>
-<footer></footer>
-</html>
+<%- include ./partials/footer.ejs %>
