Control buttons working

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -42,10 +42,10 @@
         </ul>
     </div>
     <div class="playback-controls">
-        <button id="previous" class="btn btn-cmd" title="Previous"><i class="fa fa-step-backward"></i></button>
-        <button id="stop" class="btn btn-cmd" title="Stop"><i class="fa fa-stop"></i></button>
-        <button id="play" class="btn btn-cmd" title="Play/Pause"><i class="fa fa-play"></i></button>
-        <button id="next" class="btn btn-cmd" title="Next"><i class="fa fa-step-forward"></i></button>
+        <button id="button-volumioprev" class="btn btn-cmd" title="Previous"><i class="fa fa-step-backward"></i></button>
+        <button id="button-volumiostop" class="btn btn-cmd" title="Stop"><i class="fa fa-stop"></i></button>
+        <button id="button-volumioplay" class="btn btn-cmd" title="Play/Pause"><i class="fa fa-play"></i></button>
+        <button id="button-volumionext" class="btn btn-cmd" title="Next"><i class="fa fa-step-forward"></i></button>
     </div>
     <a class="home" href="/index"><img src="images/logo.png" class="logo" alt="Volumio"></a>
 </div>
