--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -32,12 +32,12 @@
     <div class="dropdown">
         <a class="dropdown-toggle" id="menu-settings" role="button" data-toggle="dropdown" data-target="#" href="">MENU <i class="fa fa-th-list dx"></i></a>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu-settings">
-            <li class="index"><a href="/index"><i class="fa fa-play sx"></i> Main</a></li>
+            <li class="index"><a href="/"><i class="fa fa-play sx"></i> Main</a></li>
             <li class="sources"><a href="/sources"><i class="fa fa-folder-open sx"></i> Library</a></li>
-            <li class="mpd-config"><a href="/mpd-config"><i class="fa fa-cogs sx"></i> Playback</a></li>
+            <li class="mpd-config"><a href="/playback"><i class="fa fa-cogs sx"></i> Playback</a></li>
             <li class="net-config"><a href="/net-config"><i class="fa fa-sitemap sx"></i> Network</a></li>
             <li class="settings"><a href="/settings"><i class="fa fa-wrench sx"></i> System</a></li>
-            <li class="credits"><a href="/credits"><i class="fa fa-trophy sx"></i> Credits</a></li>
+            <li class="about"><a href="/about"><i class="fa fa-trophy sx"></i> About</a></li>
             <li><a href="#poweroff-modal" data-toggle="modal"><i class="fa fa-power-off sx"></i> Turn off</a></li>
         </ul>
     </div>
@@ -47,7 +47,7 @@
         <button id="button-volumioplay" class="btn btn-cmd" title="Play/Pause"><i class="fa fa-play"></i></button>
         <button id="button-volumionext" class="btn btn-cmd" title="Next"><i class="fa fa-step-forward"></i></button>
     </div>
-    <a class="home" href="/index"><img src="images/logo.png" class="logo" alt="Volumio"></a>
+    <a class="home" href="/"><img src="images/logo.png" class="logo" alt="Volumio"></a>
 </div>
 <div id="menu-bottom" class="ui-footer ui-bar-f ui-footer-fixed slidedown" data-position="fixed" data-role="footer"  role="banner">
     <ul>
