--- a/views/indextpl.ejs
+++ b/views/indextpl.ejs
@@ -1,5 +1,6 @@
 <div class="tab-content">
-
+    <script src="./scripts/assets/socket.io-1.2.0.js"></script>
+    <script src="./scripts/volumio/index-socketio-controller.js"></script>
     <!-- -------------------- PLAYBACK PANEL -------------------- -->
     <div id="playback" class="tab-pane active">
         <div class="container txtmid">
@@ -49,6 +50,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- -------------------- DATABASE PANEL -------------------- -->
     <div id="panel-sx" class="tab-pane">
