--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,18 +7,18 @@
 <script src="./themes/classic/js/notify.js"></script>
 <script src="./themes/classic/js/jquery.countdown.js"></script>
 <script src="./themes/classic/js/jquery.scrollTo.min.js"></script>
-<script src="./themes/classic/js/volumio.api.js"></script>
-<script src="./themes/classic/js/volumio.lazyloader.js"></script>
-<!--<script src="./themes/classic/js/volumio.library.js"></script>-->
+    <!--    <script src="./themes/classic/js/volumio.api.js"></script>
+        <script src="./themes/classic/js/volumio.lazyloader.js"></script>
+        <!--<script src="./themes/classic/js/volumio.library.js"></script>-->
 
 <!-- If index -->
 
 <script src="./themes/classic/js/jquery.knob.js"></script>
 <script src="./themes/classic/js/bootstrap-contextmenu.js"></script>
 <script src="./themes/classic/js/jquery.pnotify.min.js"></script>
-<script src="./themes/classic/js/volumio.playback.js"></script>
+    <!--<script src="./themes/classic/js/volumio.playback.js"></script>-->
 
-<!-- Else -->
+        <!-- Else -->
 <script src="./themes/classic/js/custom_checkbox_and_radio.js"></script>
 <script src="./themes/classic/js/custom_radio.js"></script>
 <script src="./themes/classic/js/jquery.tagsinput.js"></script>
@@ -26,9 +26,8 @@
 <script src="./themes/classic/js/parsley.min.js"></script>
 <script src="./themes/classic/js/i18n/_messages.en.js" type="text/javascript"></script>
 <script src="./themes/classic/js/application.js"></script>
-<script src="./themes/classic/js/volumio.settings.js"></script>
+<!--<script src="./themes/classic/js/volumio.settings.js"></script>-->
 <script src="./themes/classic/js/jquery.pnotify.min.js"></script>
 <script src="./themes/classic/js/bootstrap-fileupload.js"></script>
-
 </footer>
 </html>
