--- a/http/www/views/index.jade
+++ b/http/www/views/index.jade
@@ -1,11 +1,12 @@
 extends ../layouts/layout.jade
 block content
   h3 Player State
-  button#button-volumioplay.control-websocket(disabled="") Play
-  button#button-volumiopause.control-websocket(disabled="") Pause
-  button#button-volumiostop.control-websocket(disabled="") Stop
-  button#button-volumioprev.control-websocket(disabled="") Prev
-  button#button-volumionext.control-websocket(disabled="") Next
+  .btn-group
+    button#button-volumioplay.control-websocket.btn.btn-default(disabled="") Play
+    button#button-volumiopause.control-websocket.btn.btn-default(disabled="") Pause
+    button#button-volumiostop.control-websocket.btn.btn-default(disabled="") Stop
+    button#button-volumioprev.control-websocket.btn.btn-default(disabled="") Prev
+    button#button-volumionext.control-websocket.btn.btn-default(disabled="") Next
   br
   br
   #playerstate
